changes in glaamify

--- a/login.html
+++ b/login.html
@@ -145,7 +145,7 @@
 
 					  <div class="col-lg-7 my-auto">
 						<div class="header-content mx-auto">
-						  <h1 class="mb-5">Digital Marketing &amp; Tech Experts with deep understanding and love for SME businesses</h1>
+						  <h1 class="mb-5">Digital Marketing &amp; Tech Experts with deep understanding and love for Glaamify businesses</h1>
 						  <!-- <a href="https://www.google.com/partners/agency?id=8677758427" title="Read more about the Google Partnership"><img src="assets/img/logo.png" alt="google" class="m-r-1"></a> -->
 						  <!-- <a href="#demo" class="btn btn-outline btn-xl js-scroll-trigger">Request A Demo</a> -->
 						</div>
