--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	  <link rel="icon" href="" alt="">
-	  <title> Refresha | Chennai No 1 Beauty Salon and Spa </title>
+	  <title> Refresha | Chennai No 1 Beauty Salon and Sp </title>
 	  <link rel="icon" type="image/x-icon" href="assets/img/icon/favicon.png">
 
     <!-- Bootstrap CSS -->
