--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="welns-title-blk">
-					<h2 class="ft-semibold welns-title mb-3">Top Categories sfssfsf</h2>
+					<h2 class="ft-semibold welns-title mb-3">Top Categories </h2>
 				</div>
 			</div>
 		</div>
